<resources>
    <string name="app_name">Olivia</string>
    <string name="action_settings">Settings</string>
    <string name="profile_age">Age:</string>
    <string name="profile_score">Score:</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="validate">Validate</string>
    <string name="new_profile_error">Value missing</string>
    <string name="ok" translatable="false">OK</string>
    <string name="mathematics">Mathematics</string>
    <string name="informatics">Computer science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="astronomy">Astronomy</string>
    <string name="no_profiles_found">No profiles found, create a new one !</string>
    <string name="delete_message">Do you really want to delete this profile?</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="profile_playedGames">Played:</string>
    <string name="profile_hiScore">High score:</string>
    <string name="profile_rightAnswers">Right answers:</string>
    <string name="profile_wrongAnswers">Wrong answers:</string>
    <string name="stop_game">Stop the game</string>
    <string name="date_naissance">Date of birth</string>
    <string name="nameError">Don\'t forget to enter your name!</string>
    <string name="ageError">Don\'t forget to enter your date of birth!</string>
    <string name="time">Time :</string>
    <string name="min_seconds" translatable="false"> s</string>
    <string name="score_win">Good game !</string>
    <string name="score_loose">Try again !</string>
    <string name="score_hi_score">Congratulation !</string>
    <string name="min_percent" translatable="false">%</string>
    <string name="change_profile">Change profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete">Delete</string>
    <string name="years_old"> years old</string>
    <string name="achievement_connector">in</string>
    <string name="type_percent">% Score</string>
    <string name="type_played">played</string>
    <string name="type_nofault">played games with no fault</string>
    <string name="type_highscore">time beat the high score</string>
    <string name="achievement_prefix">Beat</string>
    <string name="achievement_easter_egg">Find the mysterious secret</string>
    <string name="switch_to_story">Switch to story mode</string>
    <string name="switch_to_quiz">Switch to quiz mode</string>
    <string name="story_win_medal">You win :</string>
</resources>
