<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.NewProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:id="@+id/linearLayoutNewProfile"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/textAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/age"
            android:inputType="number"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/buttonValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ef9105"
            android:text="@string/validate" />
    </LinearLayout>


</FrameLayout>
