<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.NewProfileFragment">

    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
        android:id="@+id/newProfileBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textNameProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/textAgeProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date_naissance"
                android:paddingLeft="10dp"
                android:minHeight="48dp"
                android:layout_weight="1"/>

        </LinearLayout>



        <RelativeLayout
            android:id="@+id/buttonValidation"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_background_normal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validate"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/normal_white"
                android:textSize="20dp"/>
        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
