<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/fond_bois_papier">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textNameChangeProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:minHeight="48dp"
                android:paddingLeft="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/textAgeChangeProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_naissance"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/buttonValidationChangeProfile"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_background_normal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/validate"
                    android:textColor="@color/normal_white"
                    android:textSize="20dp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
