<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_white_50percent">

    <RelativeLayout
        android:id="@+id/lytScorePopUp"
        android:layout_width="750dp"
        android:layout_height="474dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_score">


        <TextView
            android:id="@+id/txtScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/score_win"
            android:textColor="@color/normal_white"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/imgOliviaScore"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="75dp"
            android:src="@drawable/olivia_win" />

        <GridLayout
            android:layout_width="270dp"
            android:layout_height="190dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="170dp"
            android:layout_marginRight="90dp"
            android:columnCount="3">

            <TextView
                android:id="@+id/txtGoodAnswersScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:textColor="@color/app_orange_dark"
                android:textSize="25dp"
                android:text="@string/profile_rightAnswers"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txtBadAnswersScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:textColor="@color/app_orange_dark"
                android:textSize="25dp"
                android:text="@string/profile_wrongAnswers"
                android:layout_gravity="center_horizontal|top"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtHiScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:text="@string/profile_hiScore"
                android:textColor="@color/app_orange_dark"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|top" />

            <TextView
                android:id="@+id/txtOldPercent"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_brown"
                android:textSize="30dp"
                android:text="41%"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imgArrow"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_better"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/txtNewPercent"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textColor="@color/app_brown"
                android:textSize="30dp"
                android:text="100%"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <com.gc.materialdesign.views.ButtonFloat
                android:id="@+id/btnGoToSubjects"
                android:layout_width="@dimen/score_diameter"
                android:layout_height="@dimen/score_diameter"
                android:layout_marginRight="30dp"
                android:background="@color/app_purple_dark"
                materialdesign:animate="false"
                materialdesign:iconDrawable="@drawable/ic_input_menu" />

            <com.gc.materialdesign.views.ButtonFloat
                android:id="@+id/btnGoToRetry"
                android:layout_width="@dimen/score_diameter"
                android:layout_height="@dimen/score_diameter"
                android:layout_marginLeft="30dp"
                android:background="@color/app_purple_dark"
                materialdesign:animate="false"
                materialdesign:iconDrawable="@drawable/ic_input_retry" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
